[package]
name = "uptime-monitor"
version = "0.1.0"
edition = "2021"
description = "HTTP component — serves the REST API and dashboard, exports cron interface for periodic polling"
authors = ["Liam <liam@cosmonic.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.41"
